objects/Document_View_History__c.object
<CustomObject>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Document View History</relationshipLabel>
        <relationshipName>Document_View_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Document View History</relationshipLabel>
        <relationshipName>Document_View_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Techpub_Title__c</fullName>
        <description>Title from GSA url is captured into this field and appended to tech-pub URLs</description>
        <label>Techpub Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Techpub_Url__c</fullName>
        <label>Techpub Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_View_Count__c</fullName>
        <label>Total View Count</label>
        <summarizedField>Document_View_History_Detail__c.View_Count__c</summarizedField>
        <summaryForeignKey>Document_View_History_Detail__c.Document_View_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Document View History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DVH-{0000000000}</displayFormat>
        <label>Document View History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document View History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>